// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`store > can add entities to a parent entity 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {
        "6e0035c3-0d4c-445f-a42b-2d971225447c",
      },
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`store > can add entities to a parent entity at a specific index 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {
        "6e0035c3-0d4c-445f-a42b-2d971225447c",
        "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
      },
      "inputs": {},
      "type": "test",
    },
    "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`store > can add entities to root 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`store > can add entities to root at specific index 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`store > can be created with a non-empty schema 1`] = `
[MockFunction baseValidateSchema] {
  "calls": [
    [
      {
        "childrenAllowed": {},
        "entities": [
          {
            "defaultValue": [Function],
            "inputs": [
              {
                "defaultValue": [Function],
                "name": "label",
                "validate": [Function],
              },
            ],
            "isValueAllowed": false,
            "name": "text",
            "shouldBeProcessed": [Function],
            "validate": [Function],
          },
        ],
        "entityId": {
          "generate": [Function],
          "validate": [Function],
        },
        "parentRequired": [],
      },
      {
        "entities": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "inputs": {
              "label": "test",
            },
            "type": "text",
          },
        },
        "root": [
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
        ],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "entities": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "inputs": {
              "label": "test",
            },
            "type": "text",
          },
        },
        "root": [
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
        ],
      },
    },
  ],
}
`;

exports[`store > can be created with a non-empty schema 2`] = `
{
  "addEntity": [Function],
  "builder": {
    "childrenAllowed": {},
    "entities": [
      {
        "defaultValue": [Function],
        "inputs": [
          {
            "defaultValue": [Function],
            "name": "label",
            "validate": [Function],
          },
        ],
        "isValueAllowed": false,
        "name": "text",
        "shouldBeProcessed": [Function],
        "validate": [Function],
      },
    ],
    "entityId": {
      "generate": [Function],
      "validate": [Function],
    },
    "parentRequired": [],
  },
  "deleteEntity": [Function],
  "getData": [Function],
  "getSchema": [Function],
  "subscribe": [Function],
  "updateEntity": [Function],
}
`;

exports[`store > can be created with an empty schema 1`] = `
[MockFunction baseValidateSchema] {
  "calls": [
    [
      {
        "childrenAllowed": {},
        "entities": [],
        "entityId": {
          "generate": [Function],
          "validate": [Function],
        },
        "parentRequired": [],
      },
      {
        "entities": {},
        "root": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "entities": {},
        "root": [],
      },
    },
  ],
}
`;

exports[`store > can be created with an empty schema 2`] = `
{
  "addEntity": [Function],
  "builder": {
    "childrenAllowed": {},
    "entities": [],
    "entityId": {
      "generate": [Function],
      "validate": [Function],
    },
    "parentRequired": [],
  },
  "deleteEntity": [Function],
  "getData": [Function],
  "getSchema": [Function],
  "subscribe": [Function],
  "updateEntity": [Function],
}
`;

exports[`store > can be created without a schema 1`] = `
{
  "addEntity": [Function],
  "builder": {
    "childrenAllowed": {},
    "entities": [],
    "entityId": {
      "generate": [Function],
      "validate": [Function],
    },
    "parentRequired": [],
  },
  "deleteEntity": [Function],
  "getData": [Function],
  "getSchema": [Function],
  "subscribe": [Function],
  "updateEntity": [Function],
}
`;

exports[`store > can delete entities and cascade delete their children 1`] = `
{
  "entities": Map {
    "49e91328-02bc-4daa-ab56-619554e85cff" => {
      "children": Set {},
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "49e91328-02bc-4daa-ab56-619554e85cff",
  },
}
`;

exports[`store > can move an entity from root to a parent entity 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {
        "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
        "6e0035c3-0d4c-445f-a42b-2d971225447c",
      },
      "inputs": {},
      "type": "test",
    },
    "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`store > can move an entity from root to a parent entity at a specific index 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {
        "6e0035c3-0d4c-445f-a42b-2d971225447c",
        "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
      },
      "inputs": {},
      "type": "test",
    },
    "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`store > can move an entity in a parent entity 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {
        "6e0035c3-0d4c-445f-a42b-2d971225447c",
        "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
      },
      "inputs": {},
      "type": "test",
    },
    "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`store > can move an entity in root 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`store > can move an entity in root 2`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`store > can move an entity in root 3`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`store > can move an entity to root 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {},
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`store > can move an entity to root at a specific index 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {},
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`store > can retrieve the data 1`] = `
{
  "entities": Map {
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {
        "label": "test",
      },
      "type": "text",
    },
  },
  "root": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`store > can return the schema 1`] = `
{
  "entities": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "inputs": {
        "label": "test",
      },
      "type": "text",
    },
  },
  "root": [
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  ],
}
`;

exports[`store > doesn't update the entity when no mutation fields were provided 1`] = `
{
  "entities": Map {
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`store > throws when trying to add an entity to a non existent parent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > throws when trying to delete non existent entity 1`] = `"Entity with ID \\"test\\" was not found."`;

exports[`store > throws when trying to move an entity to a non existent parent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > throws when trying to update a non existent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;
